unpackaged/main/default/objects/zkfedex__HazMatDetails__c/zkfedex__HazMatDetails__c.object-meta.xml
<CustomObject>
    <label>FedEx HazMat Details</label>
    <nameField>
        <label>HazMat Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx HazMat Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>