unpackaged/main/default/objects/zkfedex__HazMatDetails__c/fields/zkfedex__PackagingCount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PackagingCount__c</fullName>
    <description>Number of units, in the units specified by the Packaging Count Units</description>
    <inlineHelpText>Number of units, in the units specified by the Packaging Count Units</inlineHelpText>
    <label>Packaging Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>