unpackaged/main/default/objects/zkfedex__HazMatDetails__c/fields/zkfedex__PackagingCountUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PackagingCountUnits__c</fullName>
    <description>Units in which the hazardous commodity is packaged</description>
    <inlineHelpText>Units in which the hazardous commodity is packaged</inlineHelpText>
    <label>Packaging Count Units</label>
    <length>10</length>
    <type>Text</type>
</CustomField>